--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@next/font": "13.1.6",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "eslint-config-prettier": "^8.6.0",
     "next": "13.1.6",
+    "prettier": "^2.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
