--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@next/font": "13.1.6",
     "axios": "^1.3.4",
+    "date-fns": "^2.29.3",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "eslint-config-prettier": "^8.6.0",
     "next": "13.1.6",
     "prettier": "^2.8.4",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
+    "react-datepicker": "^4.10.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
