--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-datepicker": "^4.10.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "postcss": "^8.4.21",
