--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prettier": "^2.8.4",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-datepicker": "^4.10.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3"
